.net framwork update 6.0

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /Qmanja_DAL/bin/Debug/net5.0
 /Rider_Printer_API/bin/Debug/net5.0
 /Rider_Printer_API/obj
+/Rider_Printer_API/bin/Debug/net6.0
+/.vs/Qmanja_Rider_PrinterAPI/v17
+/.vs/Qmanja_Rider_PrinterAPI/FileContentIndex
